[gd_scene load_steps=2 format=3 uid="uid://beplu26uk0t1y"]

[ext_resource type="Script" path="res://interactable/interact_component.gd" id="1_qk1nu"]

[node name="InteractComponent" type="Area2D"]
script = ExtResource("1_qk1nu")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
